wlr_xwayland_server_destroy gets called by itself, resulting in a double free
This is for version 0.15.1, I haven't seen anything to fix this after...
Steps to reproduce:
- Ensure an xwayland server is created via
wlr_xwayland_create
- Destroy the xwayland server using
wl_display_destroy
The wlr_xwayland_server_destroy
function is indirectly called by itself through this function chain:
wlr_xwayland_server_destroy
wlr_xwayland_destroy
handle_server_destroy
wlr_signal_emit_safe
wlr_xwayland_server_destroy
I'm not sure how to fix this because each individual function calling the others looks fine, but together they form a loop. Should the xwayland server not emit the destroy event? Should the handle_server_destroy
not call wlr_xwayland_destroy
? None seem like good options...