Destroy wlr_xwayland manually to avoid double free

See https://gitlab.freedesktop.org/wlroots/wlroots/-/issues/3417